added the footer section

--- a/Web Pages/Home Page.html
+++ b/Web Pages/Home Page.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Where Creativity Meets Technology</title>
 <link rel='stylesheet' type="text/css" href="WebD.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class="header">
@@ -60,8 +61,46 @@ Key benefits of how technology has impacted creativity:
     </div>
   </div>
 </div>
-<div class="footer">
-  <h2>Footer</h2>
+<h2 align="center">___</h2>
+<footer>
+  
+  <div class="text-1">
+    <h2>Code-Shark</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem est explicabo ullam corporis qui, repellat expedita magni. Suscipit explicabo sed mollitia, beatae eaque eius pariatur, voluptatem delectus id dolor iusto.</p>
+</div>
+<div class="mem-2" id="i-1">
+  <h2 class="ht">Team</h2>
+  <img src="shahin.jpg" alt="" class="mem-img">
+  <h4>Shahin Sha</h4>
+</div>
+<div class="mem-2" id="i-2">
+    <h2 class="ht">___</h2>
+    <img src="shahin.jpg" alt="" class="mem-img">
+    <h4>Shahin Sha</h4>
+</div>
+<div class="mem-2" id="i-3">
+    <h2 class="ht">___</h2>
+    <img src="sanchit.jpg" alt="" class="mem-img">
+    <h4>Sanchit Jain</h4>
+</div>
+<div class="cont-3">
+    <h3>Contact Us</h3>
+    <ul>
+        <li>fredysomy@gmail.com</li>
+        <li>neoblaze24@gmail.com</li>
+        <li>sanchitjain200327@gmail.com</li>
+    </ul>
+</div>
+
+</footer>
+<div class="social">
+  <a href="#" class="fa fa-google" style="font-size: 30px;color:black;"></a>
+  <a href="#" class="fa fa-linkedin" style="font-size: 30px;color:black;"></a>
+  <a href="#" class="fa fa-github" style="font-size: 30px;color:black;"></a>
+  
+  </div>
+
+
 </div>
 </body>
 </html>
